Bug 445127 - Saving files opened from a file manager silently fails
Summary: Saving files opened from a file manager silently fails
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Android Android 11.x
: NOR major
Target Milestone: ---
Assignee: sh_zam
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-11-07 15:36 UTC by Anna Medonosova
Modified: 2021-11-08 17:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
usage log (3.40 KB, text/plain)
2021-11-07 15:36 UTC, Anna Medonosova
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Anna Medonosova 2021-11-07 15:36:39 UTC
Created attachment 143314 [details]
usage log

SUMMARY
On Android (Samsung Galaxy Tab S6), when I open a .kra file from within a file manager, make changes and want to save later, the file is not saved and there is no error shown. Also, there is no 'saving document' progress bar down in the status bar (the progress bar shows up for the same file opened from within Krita). The log does not even show a save operation. 'Save as' works normally.

Saving documents opened from within Krita works correctly.

STEPS TO REPRODUCE
1. open a .kra file from a file manager
2. make a change
3. click the save button

OBSERVED RESULT
The change is not saved. There is no corresponding save operation in the log file.

EXPECTED RESULT
Ideally, the file is saved. If that is not possible, there should be an error message shown to the user.
Comment 1 sh_zam 2021-11-08 10:39:36 UTC
Hello Anna!

Yes, I can reproduce the bug on Android. I can also reproduce this on Linux if the file is only readable (ie without write permissions). File manager typically does not give the app write permissions, so this makes sense. 

Assigning this to myself.
Comment 2 Bug Janitor Service 2021-11-08 12:21:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1139
Comment 3 sh_zam 2021-11-08 13:56:49 UTC
Git commit e109a49e80eb47ffed80fafc9503e12a0af5d3df by Sharaf Zaman.
Committed on 08/11/2021 at 13:56.
Pushed by szaman into branch 'master'.

Make the modify flag writable even if the document is read-only

M  +0    -5    libs/ui/KisDocument.cpp

https://invent.kde.org/graphics/krita/commit/e109a49e80eb47ffed80fafc9503e12a0af5d3df
Comment 4 sh_zam 2021-11-08 17:40:50 UTC
Git commit c88e2124497c787a29b97ce308e1b29c3ea1c49b by Sharaf Zaman.
Committed on 08/11/2021 at 17:38.
Pushed by szaman into branch 'krita/5.0'.

Make the modify flag writable even if the document is read-only
(cherry picked from commit e109a49e80eb47ffed80fafc9503e12a0af5d3df)

M  +0    -5    libs/ui/KisDocument.cpp

https://invent.kde.org/graphics/krita/commit/c88e2124497c787a29b97ce308e1b29c3ea1c49b