Make the modify flag writable even if the document is read-only

BUG:445127